--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,16 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.4
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_countdown_timer: ^4.1.0
+  google_fonts: ^2.3.1
   shared_preferences: ^2.0.13
   top_snackbar_flutter: ^1.0.2
   twemoji: ^0.4.2
-  cupertino_icons: ^1.0.4
-  equatable: ^2.0.3
-  google_fonts: ^2.3.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -28,7 +29,6 @@ dev_dependencies:
 
 flutter:
 
-
   uses-material-design: true
   assets:
-     - assets
+    - assets
