--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,25 +7,25 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
-
   flutter_bloc: ^8.0.1
-  top_snackbar_flutter: ^1.0.2
   flutter_countdown_timer: ^4.1.0
-  shared_preferences: ^2.0.12
-  equatable: ^2.0.3
-  twemoji: ^0.4.2
-  cupertino_icons: ^1.0.2
+  flutter_svg: ^1.1.5
   google_fonts: ^2.2.0
+  shared_preferences: ^2.0.12
+  top_snackbar_flutter: ^1.0.2
+  twemoji: ^0.4.2
 
 dev_dependencies:
+  flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^1.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/words.txt
+    - assets/svg/
