--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,12 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutter_countdown_timer: ^4.1.0
-  flutter_svg: ^1.1.5
+  flutter_svg: ^1.0.3
   google_fonts: ^2.2.0
   shared_preferences: ^2.0.12
   top_snackbar_flutter: ^1.0.2
   twemoji: ^0.4.2
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_lints: ^1.0.0
